tests/models/struct/unnamed/i64/pass/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = 1)]
    i64
);
fn main() {}
