tests/models/struct/unnamed/i64/fail/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = 1.0)]
    i64
);
fn main() {}
